// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call handleScrollButtons tabs with scrolls 1`] = `
<Tabs
  activeKey={0}
  className=""
  id="handleScrollButtons"
  isFilled={true}
  isSecondary={false}
  leftScrollAriaLabel="Scroll left"
  mountOnEnter={false}
  onSelect={[Function]}
  rightScrollAriaLabel="Scroll right"
  unmountOnExit={false}
  variant="div"
>
  <div
    className="pf-c-tabs pf-m-fill"
    data-ouia-component-id={10}
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe={true}
    id="handleScrollButtons"
    onSelect={[Function]}
  >
    <button
      aria-label="Scroll left"
      className="pf-c-tabs__scroll-button"
      onClick={[Function]}
    >
      <AngleLeftIcon>
        <SVGIcon
          color="currentColor"
          config={
            Object {
              "height": 512,
              "name": "AngleLeftIcon",
              "svgPath": "M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z",
              "transform": "",
              "width": 256,
              "xOffset": 0,
              "yOffset": 0,
            }
          }
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              transform=""
            />
          </svg>
        </SVGIcon>
      </AngleLeftIcon>
    </button>
    <ul
      className="pf-c-tabs__list"
      onScroll={[Function]}
    >
      <li
        className="pf-c-tabs__item pf-m-current"
        key="0/.0"
      >
        <ForwardRef
          aria-controls="pf-tab-section-0-tab1"
          className="pf-c-tabs__button"
          id="pf-tab-0-tab1"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-0-tab1"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-0-tab1"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-0-tab1"
              className="pf-c-tabs__button"
              id="pf-tab-0-tab1"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-0-tab1"
                className="pf-c-tabs__button"
                id="pf-tab-0-tab1"
                onClick={[Function]}
              >
                Tab item 1
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
      <li
        className="pf-c-tabs__item"
        key="1/.1"
      >
        <ForwardRef
          aria-controls="pf-tab-section-1-tab2"
          className="pf-c-tabs__button"
          id="pf-tab-1-tab2"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-1-tab2"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-1-tab2"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-1-tab2"
              className="pf-c-tabs__button"
              id="pf-tab-1-tab2"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-1-tab2"
                className="pf-c-tabs__button"
                id="pf-tab-1-tab2"
                onClick={[Function]}
              >
                Tab item 2
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
      <li
        className="pf-c-tabs__item"
        key="2/.2"
      >
        <ForwardRef
          aria-controls="pf-tab-section-2-tab3"
          className="pf-c-tabs__button"
          id="pf-tab-2-tab3"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-2-tab3"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-2-tab3"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-2-tab3"
              className="pf-c-tabs__button"
              id="pf-tab-2-tab3"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-2-tab3"
                className="pf-c-tabs__button"
                id="pf-tab-2-tab3"
                onClick={[Function]}
              >
                Tab item 3
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      className="pf-c-tabs__scroll-button"
      onClick={[Function]}
    >
      <AngleRightIcon>
        <SVGIcon
          color="currentColor"
          config={
            Object {
              "height": 512,
              "name": "AngleRightIcon",
              "svgPath": "M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z",
              "transform": "",
              "width": 256,
              "xOffset": 0,
              "yOffset": 0,
            }
          }
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              transform=""
            />
          </svg>
        </SVGIcon>
      </AngleRightIcon>
    </button>
  </div>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={0}
        id="tab1"
        title="Tab item 1"
      >
        Tab 1 section
      </Tab>
    }
    id="tab1"
    key="0/.0"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={0}
          id="tab1"
          title="Tab item 1"
        >
          Tab 1 section
        </Tab>
      }
      id="tab1"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-0-tab1"
        className="pf-c-tab-content"
        hidden={false}
        id="pf-tab-section-0-tab1"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 1 section
      </section>
    </TabContent0>
  </ForwardRef>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={1}
        id="tab2"
        title="Tab item 2"
      >
        Tab 2 section
      </Tab>
    }
    id="tab2"
    key="1/.1"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={1}
          id="tab2"
          title="Tab item 2"
        >
          Tab 2 section
        </Tab>
      }
      id="tab2"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-1-tab2"
        className="pf-c-tab-content"
        hidden={true}
        id="pf-tab-section-1-tab2"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 2 section
      </section>
    </TabContent0>
  </ForwardRef>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={2}
        id="tab3"
        title="Tab item 3"
      >
        Tab 3 section
      </Tab>
    }
    id="tab3"
    key="2/.2"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={2}
          id="tab3"
          title="Tab item 3"
        >
          Tab 3 section
        </Tab>
      }
      id="tab3"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-2-tab3"
        className="pf-c-tab-content"
        hidden={true}
        id="pf-tab-section-2-tab3"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 3 section
      </section>
    </TabContent0>
  </ForwardRef>
</Tabs>
`;

exports[`should call scrollLeft tabs with scrolls 1`] = `
<Tabs
  activeKey={0}
  className=""
  id="scrollLeft"
  isFilled={true}
  isSecondary={false}
  leftScrollAriaLabel="Scroll left"
  mountOnEnter={false}
  onSelect={[Function]}
  rightScrollAriaLabel="Scroll right"
  unmountOnExit={false}
  variant="div"
>
  <div
    className="pf-c-tabs pf-m-fill"
    data-ouia-component-id={6}
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe={true}
    id="scrollLeft"
    onSelect={[Function]}
  >
    <button
      aria-label="Scroll left"
      className="pf-c-tabs__scroll-button"
      onClick={[Function]}
    >
      <AngleLeftIcon>
        <SVGIcon
          color="currentColor"
          config={
            Object {
              "height": 512,
              "name": "AngleLeftIcon",
              "svgPath": "M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z",
              "transform": "",
              "width": 256,
              "xOffset": 0,
              "yOffset": 0,
            }
          }
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              transform=""
            />
          </svg>
        </SVGIcon>
      </AngleLeftIcon>
    </button>
    <ul
      className="pf-c-tabs__list"
      onScroll={[Function]}
    >
      <li
        className="pf-c-tabs__item pf-m-current"
        key="0/.0"
      >
        <ForwardRef
          aria-controls="pf-tab-section-0-tab1"
          className="pf-c-tabs__button"
          id="pf-tab-0-tab1"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-0-tab1"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-0-tab1"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-0-tab1"
              className="pf-c-tabs__button"
              id="pf-tab-0-tab1"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-0-tab1"
                className="pf-c-tabs__button"
                id="pf-tab-0-tab1"
                onClick={[Function]}
              >
                Tab item 1
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
      <li
        className="pf-c-tabs__item"
        key="1/.1"
      >
        <ForwardRef
          aria-controls="pf-tab-section-1-tab2"
          className="pf-c-tabs__button"
          id="pf-tab-1-tab2"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-1-tab2"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-1-tab2"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-1-tab2"
              className="pf-c-tabs__button"
              id="pf-tab-1-tab2"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-1-tab2"
                className="pf-c-tabs__button"
                id="pf-tab-1-tab2"
                onClick={[Function]}
              >
                Tab item 2
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
      <li
        className="pf-c-tabs__item"
        key="2/.2"
      >
        <ForwardRef
          aria-controls="pf-tab-section-2-tab3"
          className="pf-c-tabs__button"
          id="pf-tab-2-tab3"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-2-tab3"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-2-tab3"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-2-tab3"
              className="pf-c-tabs__button"
              id="pf-tab-2-tab3"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-2-tab3"
                className="pf-c-tabs__button"
                id="pf-tab-2-tab3"
                onClick={[Function]}
              >
                Tab item 3
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      className="pf-c-tabs__scroll-button"
      onClick={[Function]}
    >
      <AngleRightIcon>
        <SVGIcon
          color="currentColor"
          config={
            Object {
              "height": 512,
              "name": "AngleRightIcon",
              "svgPath": "M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z",
              "transform": "",
              "width": 256,
              "xOffset": 0,
              "yOffset": 0,
            }
          }
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              transform=""
            />
          </svg>
        </SVGIcon>
      </AngleRightIcon>
    </button>
  </div>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={0}
        id="tab1"
        title="Tab item 1"
      >
        Tab 1 section
      </Tab>
    }
    id="tab1"
    key="0/.0"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={0}
          id="tab1"
          title="Tab item 1"
        >
          Tab 1 section
        </Tab>
      }
      id="tab1"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-0-tab1"
        className="pf-c-tab-content"
        hidden={false}
        id="pf-tab-section-0-tab1"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 1 section
      </section>
    </TabContent0>
  </ForwardRef>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={1}
        id="tab2"
        title="Tab item 2"
      >
        Tab 2 section
      </Tab>
    }
    id="tab2"
    key="1/.1"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={1}
          id="tab2"
          title="Tab item 2"
        >
          Tab 2 section
        </Tab>
      }
      id="tab2"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-1-tab2"
        className="pf-c-tab-content"
        hidden={true}
        id="pf-tab-section-1-tab2"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 2 section
      </section>
    </TabContent0>
  </ForwardRef>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={2}
        id="tab3"
        title="Tab item 3"
      >
        Tab 3 section
      </Tab>
    }
    id="tab3"
    key="2/.2"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={2}
          id="tab3"
          title="Tab item 3"
        >
          Tab 3 section
        </Tab>
      }
      id="tab3"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-2-tab3"
        className="pf-c-tab-content"
        hidden={true}
        id="pf-tab-section-2-tab3"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 3 section
      </section>
    </TabContent0>
  </ForwardRef>
</Tabs>
`;

exports[`should call scrollRight tabs with scrolls 1`] = `
<Tabs
  activeKey={0}
  className=""
  id="scrollRight"
  isFilled={true}
  isSecondary={false}
  leftScrollAriaLabel="Scroll left"
  mountOnEnter={false}
  onSelect={[Function]}
  rightScrollAriaLabel="Scroll right"
  unmountOnExit={false}
  variant="div"
>
  <div
    className="pf-c-tabs pf-m-fill"
    data-ouia-component-id={8}
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe={true}
    id="scrollRight"
    onSelect={[Function]}
  >
    <button
      aria-label="Scroll left"
      className="pf-c-tabs__scroll-button"
      onClick={[Function]}
    >
      <AngleLeftIcon>
        <SVGIcon
          color="currentColor"
          config={
            Object {
              "height": 512,
              "name": "AngleLeftIcon",
              "svgPath": "M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z",
              "transform": "",
              "width": 256,
              "xOffset": 0,
              "yOffset": 0,
            }
          }
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              transform=""
            />
          </svg>
        </SVGIcon>
      </AngleLeftIcon>
    </button>
    <ul
      className="pf-c-tabs__list"
      onScroll={[Function]}
    >
      <li
        className="pf-c-tabs__item pf-m-current"
        key="0/.0"
      >
        <ForwardRef
          aria-controls="pf-tab-section-0-tab1"
          className="pf-c-tabs__button"
          id="pf-tab-0-tab1"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-0-tab1"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-0-tab1"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-0-tab1"
              className="pf-c-tabs__button"
              id="pf-tab-0-tab1"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-0-tab1"
                className="pf-c-tabs__button"
                id="pf-tab-0-tab1"
                onClick={[Function]}
              >
                Tab item 1
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
      <li
        className="pf-c-tabs__item"
        key="1/.1"
      >
        <ForwardRef
          aria-controls="pf-tab-section-1-tab2"
          className="pf-c-tabs__button"
          id="pf-tab-1-tab2"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-1-tab2"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-1-tab2"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-1-tab2"
              className="pf-c-tabs__button"
              id="pf-tab-1-tab2"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-1-tab2"
                className="pf-c-tabs__button"
                id="pf-tab-1-tab2"
                onClick={[Function]}
              >
                Tab item 2
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
      <li
        className="pf-c-tabs__item"
        key="2/.2"
      >
        <ForwardRef
          aria-controls="pf-tab-section-2-tab3"
          className="pf-c-tabs__button"
          id="pf-tab-2-tab3"
          onClick={[Function]}
        >
          <TabContainer
            aria-controls="pf-tab-section-2-tab3"
            className="pf-c-tabs__button"
            forwardRef={null}
            id="pf-tab-2-tab3"
            onClick={[Function]}
          >
            <TabButtonWithRef
              aria-controls="pf-tab-section-2-tab3"
              className="pf-c-tabs__button"
              id="pf-tab-2-tab3"
              onClick={[Function]}
            >
              <button
                aria-controls="pf-tab-section-2-tab3"
                className="pf-c-tabs__button"
                id="pf-tab-2-tab3"
                onClick={[Function]}
              >
                Tab item 3
              </button>
            </TabButtonWithRef>
          </TabContainer>
        </ForwardRef>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      className="pf-c-tabs__scroll-button"
      onClick={[Function]}
    >
      <AngleRightIcon>
        <SVGIcon
          color="currentColor"
          config={
            Object {
              "height": 512,
              "name": "AngleRightIcon",
              "svgPath": "M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z",
              "transform": "",
              "width": 256,
              "xOffset": 0,
              "yOffset": 0,
            }
          }
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              transform=""
            />
          </svg>
        </SVGIcon>
      </AngleRightIcon>
    </button>
  </div>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={0}
        id="tab1"
        title="Tab item 1"
      >
        Tab 1 section
      </Tab>
    }
    id="tab1"
    key="0/.0"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={0}
          id="tab1"
          title="Tab item 1"
        >
          Tab 1 section
        </Tab>
      }
      id="tab1"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-0-tab1"
        className="pf-c-tab-content"
        hidden={false}
        id="pf-tab-section-0-tab1"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 1 section
      </section>
    </TabContent0>
  </ForwardRef>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={1}
        id="tab2"
        title="Tab item 2"
      >
        Tab 2 section
      </Tab>
    }
    id="tab2"
    key="1/.1"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={1}
          id="tab2"
          title="Tab item 2"
        >
          Tab 2 section
        </Tab>
      }
      id="tab2"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-1-tab2"
        className="pf-c-tab-content"
        hidden={true}
        id="pf-tab-section-1-tab2"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 2 section
      </section>
    </TabContent0>
  </ForwardRef>
  <ForwardRef
    activeKey={0}
    child={
      <Tab
        eventKey={2}
        id="tab3"
        title="Tab item 3"
      >
        Tab 3 section
      </Tab>
    }
    id="tab3"
    key="2/.2"
  >
    <TabContent0
      activeKey={0}
      child={
        <Tab
          eventKey={2}
          id="tab3"
          title="Tab item 3"
        >
          Tab 3 section
        </Tab>
      }
      id="tab3"
      innerRef={null}
    >
      <section
        aria-labelledby="pf-tab-2-tab3"
        className="pf-c-tab-content"
        hidden={true}
        id="pf-tab-section-2-tab3"
        role="tabpanel"
        tabIndex={0}
      >
        Tab 3 section
      </section>
    </TabContent0>
  </ForwardRef>
</Tabs>
`;

exports[`should render accessible tabs 1`] = `
Array [
  <nav
    aria-label="accessible Tabs example"
    class="pf-c-tabs"
    data-ouia-component-id="1"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="accessibleTabs"
  >
    <button
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <a
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__button"
          href="#/items/1"
          id="pf-tab-0-tab1"
        >
          Tab item 1
        </a>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <a
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__button"
          href="#/items/2"
          id="pf-tab-1-tab2"
        >
          Tab item 2
        </a>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <a
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__button"
          href="#/items/3"
          id="pf-tab-2-tab3"
        >
          Tab item 3
        </a>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </nav>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;

exports[`should render filled tabs 1`] = `
Array [
  <div
    class="pf-c-tabs pf-m-fill"
    data-ouia-component-id="2"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="filledTabs"
  >
    <button
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__button"
          id="pf-tab-0-tab1"
        >
          Tab item 1
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__button"
          id="pf-tab-1-tab2"
        >
          Tab item 2
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__button"
          id="pf-tab-2-tab3"
        >
          Tab item 3
        </button>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;

exports[`should render secondary tabs 1`] = `
Array [
  <div
    class="pf-c-tabs"
    data-ouia-component-id="3"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="primarieTabs"
  >
    <button
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-primarieTabs"
          class="pf-c-tabs__button"
          id="pf-tab-0-primarieTabs"
        >
          Tab item 1
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__button"
          id="pf-tab-1-tab2"
        >
          Tab item 2
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__button"
          id="pf-tab-2-tab3"
        >
          Tab item 3
        </button>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-primarieTabs"
    class="pf-c-tab-content"
    id="pf-tab-section-0-primarieTabs"
    role="tabpanel"
    tabindex="0"
  >
    <div
      class="pf-c-tabs"
      data-ouia-component-id="4"
      data-ouia-component-type="PF4/Tabs"
      data-ouia-safe="true"
      id="secondaryTabs"
    >
      <button
        aria-label="Scroll left"
        class="pf-c-tabs__scroll-button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
            transform=""
          />
        </svg>
      </button>
      <ul
        class="pf-c-tabs__list"
      >
        <li
          class="pf-c-tabs__item"
        >
          <button
            aria-controls="pf-tab-section-10-secondary tab1"
            class="pf-c-tabs__button"
            id="pf-tab-10-secondary tab1"
          >
            Secondary Tab 1
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
        >
          <button
            aria-controls="pf-tab-section-11-secondary tab2"
            class="pf-c-tabs__button"
            id="pf-tab-11-secondary tab2"
          >
            Secondary Tab 2
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
        >
          <button
            aria-controls="pf-tab-section-12-secondary tab3"
            class="pf-c-tabs__button"
            id="pf-tab-12-secondary tab3"
          >
            Secondary Tab 3
          </button>
        </li>
      </ul>
      <button
        aria-label="Scroll right"
        class="pf-c-tabs__scroll-button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            transform=""
          />
        </svg>
      </button>
    </div>
    <section
      aria-labelledby="pf-tab-10-secondary tab1"
      class="pf-c-tab-content"
      hidden=""
      id="pf-tab-section-10-secondary tab1"
      role="tabpanel"
      tabindex="0"
    >
      Secondary Tab 1 section
    </section>
    <section
      aria-labelledby="pf-tab-11-secondary tab2"
      class="pf-c-tab-content"
      hidden=""
      id="pf-tab-section-11-secondary tab2"
      role="tabpanel"
      tabindex="0"
    >
      Secondary Tab 2 section
    </section>
    <section
      aria-labelledby="pf-tab-12-secondary tab3"
      class="pf-c-tab-content"
      hidden=""
      id="pf-tab-section-12-secondary tab3"
      role="tabpanel"
      tabindex="0"
    >
      Secondary Tab 3 section
    </section>
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;

exports[`should render simple tabs 1`] = `
Array [
  <div
    class="pf-c-tabs"
    data-ouia-component-id="0"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="simpleTabs"
  >
    <button
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item pf-m-current"
      >
        <button
          aria-controls="pf-tab-section-0-tab1"
          class="pf-c-tabs__button"
          id="pf-tab-0-tab1"
        >
          Tab item 1
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-1-tab2"
          class="pf-c-tabs__button"
          id="pf-tab-1-tab2"
        >
          Tab item 2
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-2-tab3"
          class="pf-c-tabs__button"
          id="pf-tab-2-tab3"
        >
          Tab item 3
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-3-tab4"
          class="pf-c-tabs__button"
          id="pf-tab-3-tab4"
        >
          <b>
            Tab item 
            <i>
              4
            </i>
          </b>
        </button>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-0-tab1"
    class="pf-c-tab-content"
    id="pf-tab-section-0-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-1-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-1-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-2-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-2-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
  <section
    aria-labelledby="pf-tab-3-tab4"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-3-tab4"
    role="tabpanel"
    tabindex="0"
  >
    Tab 4 section
  </section>,
]
`;

exports[`should render tabs with eventKey Strings 1`] = `
Array [
  <div
    class="pf-c-tabs"
    data-ouia-component-id="11"
    data-ouia-component-type="PF4/Tabs"
    data-ouia-safe="true"
    id="eventKeyTabs"
  >
    <button
      aria-label="Scroll left"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          transform=""
        />
      </svg>
    </button>
    <ul
      class="pf-c-tabs__list"
    >
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-one-tab1"
          class="pf-c-tabs__button"
          id="pf-tab-one-tab1"
        >
          Tab item 1
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-two-tab2"
          class="pf-c-tabs__button"
          id="pf-tab-two-tab2"
        >
          Tab item 2
        </button>
      </li>
      <li
        class="pf-c-tabs__item"
      >
        <button
          aria-controls="pf-tab-section-three-tab3"
          class="pf-c-tabs__button"
          id="pf-tab-three-tab3"
        >
          Tab item 3
        </button>
      </li>
    </ul>
    <button
      aria-label="Scroll right"
      class="pf-c-tabs__scroll-button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 256 512"
        width="1em"
      >
        <path
          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          transform=""
        />
      </svg>
    </button>
  </div>,
  <section
    aria-labelledby="pf-tab-one-tab1"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-one-tab1"
    role="tabpanel"
    tabindex="0"
  >
    Tab 1 section
  </section>,
  <section
    aria-labelledby="pf-tab-two-tab2"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-two-tab2"
    role="tabpanel"
    tabindex="0"
  >
    Tab 2 section
  </section>,
  <section
    aria-labelledby="pf-tab-three-tab3"
    class="pf-c-tab-content"
    hidden=""
    id="pf-tab-section-three-tab3"
    role="tabpanel"
    tabindex="0"
  >
    Tab 3 section
  </section>,
]
`;
